--- a/竞赛模板整合.md
+++ b/竞赛模板整合.md
@@ -1,7 +1,6 @@
 # 算法竞赛模板整合
 
-> 本文档整合了所有算法竞赛常用模板，按算法类型分类整理，便于快速查找和使用。
-
+> The Three Stooges
 ## 📚 目录
 
 - [字符串算法](#字符串算法)
@@ -3056,4 +3055,258 @@ int main(){
     cout<<ans;
     return 0;
 }
+```
+
+### 扫描线+线段树（矩形面积并）
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+typedef long long ll;
+ll arr[15010],n,height[15010];
+
+struct node{
+    ll l,r,h;
+}a[15010];
+
+struct compare{
+    bool operator()(pair<ll,ll> a,pair<ll,ll> b){
+        if(a.first!=b.first) return a.first<b.first;
+        return a.second>b.second;
+        //大根堆
+    }
+};
+bool cmp(node x,node y){
+    return x.l<y.l;
+}
+int main(){
+    ll l,r,h,m=0;
+    while(scanf("%lld %lld %lld",&l,&h,&r)!=EOF){
+        a[++m].l=l;
+        a[m].r=r-1;
+        a[m].h=h;
+        arr[++n]=l;
+        arr[++n]=r;
+        arr[++n]=r-1;
+    }
+    sort(arr+1,arr+n+1);
+    ll len=unique(arr+1,arr+n+1)-arr-1;
+    for(int j=1;j<=m;j++){
+        a[j].l=lower_bound(arr+1,arr+len+1,a[j].l)-arr;
+        a[j].r=lower_bound(arr+1,arr+len+1,a[j].r)-arr;
+    }
+    sort(a+1,a+m+1,cmp);
+   priority_queue<pair<ll,ll>, vector<pair<ll,ll>>, compare> heap;
+   for(int i=1,j=0;i<=len;i++){
+    for(;j<=m&&a[j].l<=i;j++){
+        heap.push(make_pair(a[j].h,a[j].r));
+    }
+    while(!heap.empty()&&heap.top().second<i)
+    {
+        heap.pop();
+    }
+   
+   if(!heap.empty()){
+    height[i]=heap.top().first;
+   }
+}
+    ll ansn=0;
+    pair<ll,ll>ans[15010];
+    for(ll i=1,pre=0;i<=len;i++){
+        if(pre!=height[i]){
+            ans[++ansn]=make_pair(arr[i],height[i]);
+        }
+        pre=height[i];
+    }
+    for(int i=1;i<=ansn;i++){
+        cout<<ans[i].first<<' '<<ans[i].second<<' ';
+    }
+}
+```
+
+### 建树参考
+
+```cpp
+#include<bits/stdc++.h>
+//#define int long long
+#define in(a) a = read_int()
+using namespace std;
+const int N = 2e5 + 5;
+const int inf = INT_MAX;
+inline int read_int() {
+	int x = 0;
+	char ch = getchar();
+	bool f = 0;
+	while('9' < ch || ch < '0') f |= ch == '-' , ch = getchar();
+	while('0' <= ch && ch <= '9') x = (x << 3) + (x << 1) + ch - '0' , ch = getchar();
+	return f ? -x : x;
+}
+struct Edge {
+	int n , v , w;
+} edge[N << 1];
+int head[N] , eid;
+void eadd(int u , int v , int w) {
+	edge[++ eid].n = head[u] , edge[eid].v = v , edge[head[u] = eid].w = w;
+}
+int n;
+int l[N] , r[N] , ans[N];
+void dfs(int u , int fa) { // 树形 DP 部分 
+	l[u] = 1; // 初始化左边界 
+	for(int i = head[u] ; i ; i = edge[i].n) {
+		int v = edge[i].v , w = edge[i].w;
+		if(v != fa) {
+			r[v] = w - 1; // 初始化右边界 
+			dfs(v , u);
+			r[u] = min(r[u] , w - l[v]); // 转移过程 
+			l[u] = max(l[u] , w - r[v]);
+		}
+	}
+}
+queue<int>q;
+signed main() {
+	in(n);
+	for(int i = 1 ; i < n ; i ++) {
+		int u , v , w;
+		in(u) , in(v) , in(w);
+		eadd(u , v , w) , eadd(v , u , w);
+	}
+	r[1] = 1e9; // 初始化根节点的右边界 
+	dfs(1 , 0); // 求每个点权的取值范围 
+	for(int i = 1 ; i <= eid ; i += 2) { // 判无解部分 
+		int u = edge[i].v , v = edge[i + 1].v , w = edge[i].w;
+		if(r[u] + r[v] < w || l[u] > r[u] || l[v] > r[v]) { 
+            cout<<"NO";
+			return 0;
+		}
+	}
+	ans[1] = l[1]; // 若有解，根节点点权取左边界 
+	q.push(1);
+	while(!q.empty()) { // 广搜部分 
+		int u = q.front();
+		q.pop();
+		for(int i = head[u] ; i ; i = edge[i].n) {
+			int v = edge[i].v , w = edge[i].w;
+			if(ans[v]) continue;
+			ans[v] = w - ans[u]; // 递推求解 
+			q.push(v);
+		}
+	}
+	cout<<"YES\n"; // 打印答案 
+	for(int i = 1 ; i <= n ; i ++) cout<<ans[i]<<' ';
+	return 0;
+}
+```
+
+### Hash树
+
+```cpp
+//树同构
+
+#include <bits/stdc++.h>
+ 
+ typedef long long LL;
+ const int N = 60, MO = 998244353;
+ 
+ struct Edge {
+     int nex, v;
+ }edge[N << 1]; int tp;
+ 
+ int e[N], n, m, turn, fr[N], p[1000010], top, siz[N], h[N], g[N];
+ std::vector<int> v[N];
+ bool vis[1000010];
+ 
+ inline void add(int x, int y) {
+     tp++;
+     edge[tp].v = y;
+     edge[tp].nex = e[x];
+     e[x] = tp;
+     return;
+ }
+ 
+ inline bool equal(int a, int b) {
+     int len = v[a].size();
+     if(len != v[b].size()) return false;
+     for(int i = 0; i < len; i++) {
+         if(v[a][i] != v[b][i]) return false;
+     }
+     return true;
+ }
+ 
+ inline void getp(int n) {
+     for(int i = 2; i <= n; i++) {
+         if(!vis[i]) {
+             p[++top] = i;
+         }
+         for(int j = 1; j <= top && i * p[j] <= n; j++) {
+             vis[i * p[j]] = 1;
+             if(i % p[j] == 0) {
+                 break;
+             }
+         }
+     }
+     return;
+ }
+ 
+ void DFS_1(int x, int f) {
+     siz[x] = 1;
+     h[x] = 1;
+     for(int i = e[x]; i; i = edge[i].nex) {
+         int y = edge[i].v;
+         if(y == f) continue;
+         DFS_1(y, x);
+         h[x] = (h[x] + 1ll * h[y] * p[siz[y]] % MO) % MO;
+         siz[x] += siz[y];
+     }
+     return;
+ }
+ 
+ void DFS_2(int x, int f, int V) {
+     g[x] = (h[x] + 1ll * V * p[n - siz[x]] % MO) % MO;
+     v[turn].push_back(g[x]);
+     V = (1ll * V * p[n - siz[x]] % MO + 1) % MO;
+     for(int i = e[x]; i; i = edge[i].nex) {
+         int y = edge[i].v;
+         if(y == f) {
+             continue;
+         }
+         DFS_2(y, x, ((LL)V + h[x] - 1 - 1ll * h[y] * p[siz[y]] % MO + MO) % MO);
+     }
+     return;
+ }
+ 
+ int main() {
+     getp(1000009);
+     scanf("%d", &m);
+     for(turn = 1; turn <= m; turn++) {
+         scanf("%d", &n);
+         tp = 0;
+         memset(e + 1, 0, n * sizeof(int));
+         for(int i = 1, x; i <= n; i++) {
+             scanf("%d", &x);
+             if(x) {
+                 add(x, i);
+                 add(i, x);
+             }
+         }
+         DFS_1(1, 0);
+         DFS_2(1, 0, 0);
+         std::sort(v[turn].begin(), v[turn].end());
+     }
+ 
+     for(int i = 1; i <= m; i++) {
+         fr[i] = i;
+     }
+     for(int i = 2; i <= m; i++) {
+         for(int j = 1; j < i; j++) {
+             if(equal(i, j)) {
+                 fr[i] = fr[j];
+                 break;
+             }
+         }
+     }
+     for(int i = 1; i <= m; i++) {
+         printf("%d\n", fr[i]);
+     }
+     return 0;
+ }
 ```
