--- a/竞赛模板整合.md
+++ b/竞赛模板整合.md
@@ -12,7 +12,6 @@
 - [其他算法](#其他算法)
 
 ---
-
 ## 字符串算法
 
 ### AC自动机
@@ -1838,6 +1837,296 @@ int main(){
         if(dfs(i)) ans++;
     }
     cout<<ans;
+}
+```
+
+### Dijkstra算法
+
+```cpp
+//小根堆实现较为简单，这里采用以点为复杂度的反向索引堆的优化,一般不会用
+#include<bits/stdc++.h>
+using namespace std;
+const int maxn=100010;
+const int inf=1e8;
+struct graph{
+    int next,to,w;
+}g[maxn*2];
+int head[maxn],cnt,n,m;
+int heap[maxn];//反向索引堆
+int where[maxn];//表示点在堆上位置，初始化为-1
+int heapSize;
+int dis[maxn];
+void build(int n){
+    cnt=1;
+    heapSize=0;
+    for(int i=1;i<=n;i++){
+        heap[i]=0;
+        where[i]=-1;
+        head[i]=0;
+        dis[i]=inf;
+    }
+}
+void add(int u,int v,int w){
+    g[cnt].next=head[u];
+    g[cnt].to=v;
+    g[cnt].w=w;
+    head[u]=cnt++;
+}
+void Swap(int i,int j){
+    swap(heap[i],heap[j]);
+    where[heap[i]]=i;
+    where[heap[j]]=j;
+}
+void heapInsert(int i){
+    while(dis[heap[i]]<dis[heap[(i-1)/2]]){
+        Swap(i,(i-1)/2);
+        i=(i-1)/2;
+    }
+}
+void addorupdateoringnore(int v,int c){
+    if(where[v]==-1){
+        heap[heapSize]=v;
+        where[v]=heapSize++;
+        dis[v]=c;
+        heapInsert(where[v]);
+    }else if(where[v]>=0){
+        dis[v]=min(dis[v],c);
+        heapInsert(where[v]);
+    }
+}
+void heapify(int i){
+    int l=1;
+    while(l<heapSize){
+        int best=l+1<heapSize&&dis[heap[l+1]]<dis[heap[l]]?l+1:l;
+        best=dis[heap[best]]<dis[heap[i]]?best:i;
+        if(best==i) break;
+        Swap(best,i);
+        i=best;
+        l=i*2+1;
+    }
+}
+bool isEmpty(){
+    return heapSize==0;
+}
+int pop(){
+    int ans=heap[0];
+    swap(heap[0],heap[--heapSize]);
+    heapify(0);
+    where[ans]=-2;
+    return ans;
+}
+int main(){
+    cin>>n>>m;
+    int s;
+    cin>>s;
+    build(n);
+    for(int i=1;i<=m;i++){
+        int u,v,w;
+        cin>>u>>v>>w;
+        add(u,v,w);
+    }
+    addorupdateoringnore(s,0);
+    while(!isEmpty()){
+        int u=pop();
+        for(int ei=head[u];ei>0;ei=g[ei].next){
+            addorupdateoringnore(g[ei].to,dis[u]+g[ei].w);
+        }
+    }
+    int ans=-inf;
+    for(int i=1;i<=n;i++){
+        /*if(dis[i]==inf){
+            cout<<-1<<endl;
+        }
+        ans=max(ans,dis[i]);*/
+        cout<<dis[i]<<' ';
+    }
+    //cout<<ans<<endl;
+}
+```
+
+### 分层图最短路
+
+```cpp
+//无论是在bfs上分层还是dijkstra上，本质其实就是把原图上的点与其的不同状态整合出更多的点
+//难点在于如何将点上的状态给储存下来，以及如何转移
+#include<bits/stdc++.h>
+using namespace std;
+const int maxn=50010;
+const int inf=1e8;
+struct dot{
+    int x,cost,k;
+};
+struct graph{
+    int next,to,w;
+}g[maxn<<1];
+struct compare{
+   bool operator()(dot x,dot y){
+        return x.cost>y.cost;
+        // 小根堆
+    }
+};
+int head[maxn<<1],cnt=1,n,m,k,dis[maxn][20];
+bool vis[maxn][20];
+priority_queue<dot,vector<dot>,compare>q;
+void add(int u,int v,int w){
+    g[cnt].next=head[u];
+    g[cnt].to=v;
+    g[cnt].w=w;
+    head[u]=cnt++;
+}
+int main(){
+    cin>>n>>m>>k;
+    int s,t;
+    cin>>s>>t;
+    for(int i=1;i<=m;i++){
+        int u,v,w;
+        cin>>u>>v>>w;
+        add(u,v,w);
+        add(v,u,w);
+    }
+    for(int i=0;i<=n;i++){
+        for(int j=0;j<=k;j++){
+            dis[i][j]=inf;
+        }
+    }
+    dis[s][0]=0;
+    q.push({s,0,0});
+    while(!q.empty()){
+        int xn=q.top().x;
+        int cost=q.top().cost;
+        int kn=q.top().k;
+        q.pop();
+        if(vis[xn][kn]) continue;
+        vis[xn][kn]=1;
+        if(xn==t){
+            cout<<cost<<endl;
+            return 0;
+        }
+        for(int i=head[xn];i>0;i=g[i].next){
+            int v=g[i].to;
+            if(kn<k&&cost<dis[v][kn+1]){
+                dis[v][kn+1]=cost;
+                q.push({v,cost,kn+1});
+            }
+            if(cost+g[i].w<dis[v][kn]){
+                dis[v][kn]=cost+g[i].w;
+                q.push({v,cost+g[i].w,kn});
+            }
+        }
+    }   
+}
+/*
+struct Compare {
+    bool operator()(const State& a, const State& b) {
+        return a.cost > b.cost; // 小根堆
+    }
+};
+    priority_queue<State, vector<State>, Compare> q;
+    这样子定义也可以
+*/
+```
+
+### 双向广搜
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+typedef long long ll;
+ll n,m;
+ll an[45];
+ll l[1<<20+1],r[1<<20+1];
+ll f(int i,int e,ll s,ll w,ll a[],ll j){
+    if(s>w) return j;
+    if(i==e) a[j++]=s;
+    else {
+        j=f(i+1,e,s,w,a,j);
+        j=f(i+1,e,s+an[i],w,a,j);
+    }
+    return j;
+}
+ll compute(){
+    ll lsize=f(0,n>>1,0,m,l,0);
+    ll rsize=f(n>>1,n,0,m,r,0);
+    sort(l,l+lsize);
+    sort(r,r+rsize);
+    ll ans=0;
+    for(int i=lsize-1,j=0;i>=0;i--){
+        while(j<rsize&&l[i]+r[j]<=m){
+            j++;
+        }
+        ans+=j;
+    }
+    return ans;
+}
+int main(){
+    cin>>n>>m;
+  for(int i=0;i<n;i++) cin>>an[i];
+  sort(an,an+n);
+  cout<<compute();
+}
+```
+
+### 拓扑排序
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+const int maxn=100001;
+int cnt,n,m,head[maxn],indegree[maxn],per[maxn];
+
+struct graph{
+    int next,to;
+}g[maxn];
+
+void add(int u,int v){
+    g[cnt].next=head[u];
+    g[cnt].to=v;
+    head[u]=cnt++;
+}
+
+bool tpsort(){
+    //queue<int> q;  // 如果把队列改成小根堆的话，就可以使队列结果为字典序最小排列
+    priority_queue<int,vector<int>,greater<int>>q;
+    for(int i=1;i<=n;i++){
+        if(indegree[i]==0){
+            q.push(i);
+        }
+    }
+    int fill=0;
+    while(!q.empty()){
+        int cur=q.top();
+        q.pop();
+        per[++fill]=cur;
+        for(int ei=head[cur];ei!=0;ei=g[ei].next){
+            if(--indegree[g[ei].to]==0){
+                q.push(g[ei].to);
+            }
+        }
+    }
+    return fill==n;
+}
+int main(){
+    cin>>n>>m;
+    cnt=1;
+    memset(head,0,sizeof(head));  // 初始化head数组
+    memset(indegree,0,sizeof(indegree));  // 初始化入度数组
+    
+    for(int i=1;i<=m;i++){
+        int u,v;
+        cin>>u>>v;
+        add(u,v);
+        indegree[v]++;
+    }
+    
+    if(!tpsort()){
+        cout<<-1<<endl;
+    }else {
+        for(int i=1;i<=n;i++){
+            cout<<per[i]<<' ';
+        }
+        cout<<endl;
+    }
+    return 0;
 }
 ```
 
